gen/games/v1/cargo-errors.log
    Checking google-games1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/games/v1/lib)
error[E0428]: the name `PlayedWith` is defined multiple times
    --> games/v1/lib/src/lib.rs:7682:17
     |
7680 |                 PlayedWith,
     |                 ---------- previous definition of the type `PlayedWith` here
7681 |                 #[doc = "Retrieve a list of players you have played a multiplayer game (realtime or turn-based) with recently."]
7682 |                 PlayedWith,
     |                 ^^^^^^^^^^ `PlayedWith` redefined here
     |
     = note: `PlayedWith` must be defined only once in the type namespace of this enum

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
error: Could not compile `google-games1`.

To learn more, run the command again with --verbose.
